@startuml

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

class Jugador {
    - nombre:String
    + Jugador(nombre:String)
    + cambiarRespuesta()
    + agregarOpcion(pregunta:Pregunta, numeroOpcion:int)
    + usarMultiplicador(pregunta:Pregunta, multiplicador:Multiplicador)
    + getNombre():String
    + getRespuesta():Respuesta
    + asignarPuntos(puntos:Puntaje)
    + getPuntos():Puntaje
}

class Multiplicador {
    + multiplicar(puntaje:Puntaje):Puntaje
}

class Puntaje {
    - valor:int
    + Puntaje(puntaje:int)
    + multiplicarseCon(otroPuntaje:Puntaje):Puntaje
    + sumarseCon(otroPuntaje:Puntaje):Puntaje
    + valorNumerico():int
    + equals(Object o):boolean
    + hashCode():int
}

class Respuesta {
    - opciones: ArrayList<Opcion>
    - cantidadDeOpcionesCorrectas:int
    - cantidadDeOpcionesIncorrectas:int
    + Respuesta(opciones:ArrayList<Opcion>)
    + agregarOpcion(opcion:Opcion)
    + eliminarOpciones()
    - otraRespuestaTieneMayorCantidadDeOpciones(otraRespuesta:Respuesta):boolean
    + corregirRespuestaUnica(otraRespuesta:Respuesta):boolean
    + corregirRespuestaSinImportarElOrden(otraRespuesta:Respuesta):boolean
    + corregirImportandoElOrden(otraRespuesta:Respuesta):boolean
    + cantidadDeOpcionesCorrectas():int
    + cantidadDeOpcionesIncorrectas():int
}

Multiplicador <<Interface>>
Jugador *-- "1..*" Multiplicador
Jugador o-- Puntaje
Jugador o-- Respuesta

@enduml
